Fixes the open and closing dates, a missing tag in required docs.

--- a/_includes/components/joa/usds/cx/nav.html
+++ b/_includes/components/joa/usds/cx/nav.html
@@ -18,7 +18,7 @@
       </li>
       <li class="usajobs-nav-secondary__container">
         <a class="usajobs-nav-secondary__item usajobs-joa-nav__item" href="#where-you-will-work" data-behavior="nav-secondary.scroll-to-top nav-secondary.make-active">
-          Where you'll work
+          Who you'll work with
         </a>
       </li>
       <li class="usajobs-nav-secondary__container">
