--- a/_includes/components/joa/usds/cx/where-you-will-work.html
+++ b/_includes/components/joa/usds/cx/where-you-will-work.html
@@ -1,5 +1,5 @@
 <div id="where-you-will-work" class="usajobs-joa-section usajobs-joa-section--pilot">
-  <h2 class="usajobs-joa-section--pilot__header">Where you'll work</h2>
+  <h2 class="usajobs-joa-section--pilot__header">Who you'll work with</h2>
   <p>
     {{ job.AgencyMarketingStatement }}
   </p>
