--- a/_includes/components/joa/usds/cx/required-documents.html
+++ b/_includes/components/joa/usds/cx/required-documents.html
@@ -10,7 +10,7 @@
         <h4>All applicants must submit a resume and a design portfolio.</h4>
         <ul>
           <li><strong>Resume</strong>: We will review up to 3 pages of work experience. On your resume, ensure that the qualifications for this job are reflected in the first three pages. Also, be sure to <a href="https://www.usajobs.gov/Help/faq/application/documents/resume/what-to-include/#what-to-include-in-your-resume" target="_blank">include the start and end dates for each position you held</a>, either month and year or month, day, and year for short-term projects. If your position was not full time, you must also indicate the number of hours worked per week.</li>
-          <li><strong>Design portfolio: A PDF limited to 3MB, or include a URL within your resume, of work samples that exemplify your relevant experience. The portfolio can include case studies, examples of project work, and/or journey maps. Either your resume or portfolio should include what your role was in each of the projects.</li>
+          <li><strong>Design portfolio</strong>: A PDF limited to 3MB, or include a URL within your resume, of work samples that exemplify your relevant experience. The portfolio can include case studies, examples of project work, and/or journey maps. Either your resume or portfolio should include what your role was in each of the projects.</li>
         <p>
         </p>
       </div>
