Removes 2nd link from Benefits when it is left blank. Removes redundant future consideration sentence from 1st paragraph in How you will be evaluated.

--- a/_includes/components/joa/usds/cx/where-you-will-work.html
+++ b/_includes/components/joa/usds/cx/where-you-will-work.html
@@ -19,11 +19,13 @@
               Learn more about federal benefits
             </a>
           </li>
+          {% if job.UserArea.Details.BenefitsURL != '' %}
           <li>
             <a href="{{ job.UserArea.Details.BenefitsURL }}" target="_blank">
               Learn more about benefits at the {{ job.OrganizationName }}
             </a>
           </li>
+          {% endif %}
         </ul>
     </li>
     <li>
