--- a/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
+++ b/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
@@ -2,7 +2,7 @@
   <h2 class="usajobs-joa-section__header--pilot">How you will be evaluated</h2>
   {% include components/joa/usds/cx/warning-evaluation.html %}
   <p>
-    The qualifications for this position will be evaluated by subject matter experts. Apply only if you meet the qualifications. If you are not selected for this position you may be considered for similar positions at High Impact Service Provider agencies for up to 1 year.
+    The qualifications for this position will be evaluated by subject matter experts. Apply only if you meet the qualifications.
   </p>
   <h4>Resume review</h4>
   <p>
