Update earlier USDS pilot JOA template. [Fixes #176]

--- a/_includes/components/joa/usds/doi/how-you-will-be-evaluated.html
+++ b/_includes/components/joa/usds/doi/how-you-will-be-evaluated.html
@@ -20,6 +20,6 @@
   </p>
   <h4>Future consideration</h4>
   <p>
-    If you are not selected for this position you may be considered for similar positions at this agency within 90 days.
+    If you are not selected for this position you may be considered for similar positions at the agency for up to one year from the date the certificates are issued.
   </p>
 </div>
