--- a/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
+++ b/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
@@ -2,11 +2,11 @@
   <h2 class="usajobs-joa-section__header--pilot">How you will be evaluated</h2>
   {% include components/joa/usds/cx/warning-evaluation.html %}
   <p>
-    The qualifications for this position will be evaluated by subject matter experts. Apply only if you meet the qualifications.
+    The qualifications for this position will be evaluated by subject matter experts. Apply only if you meet the qualifications outlined above.
   </p>
-  <h4>Resume review</h4>
+  <h4>Resume and Portfolio Review</h4>
   <p>
-    Subject matter experts will review the first three pages of your resume to determine your technical qualifications for your chosen role(s) based on the required competencies.
+    Subject matter experts will review the first three pages of your resume and the portfolio you submit to determine your technical qualifications for your chosen role(s) based on the required competencies.
   </p>
   <h4>Qualifying phone interviews</h4>
   <p>
