--- a/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
+++ b/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
@@ -20,7 +20,7 @@
   </p>
   <h4>Future consideration</h4>
   <p>
-    If you are not selected for this position you may be considered for similar positions at High Impact Service Provider agencies for up to 1 year.
+    If an offer is extended to you by an agency and you accept, you will then be removed from consideration for other positions. If you are not selected for this position you may be considered for similar positions at High Impact Service Provider agencies for up to 1 year.
   </p>
   <h3>Get answers to questions about this process and position</h3>
   <p>
