Clarifies the selection process and future consideration.

--- a/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
+++ b/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
@@ -18,9 +18,16 @@
     <a href="#evaluation-modal-trigger" class="usajobs-joa-section--pilot__modal-trigger" href="#evaluation-modal-trigger" data-object-trigger="modal" data-target="#evaluation-modal">Preference will be applied</a> to applicants who move forward
     after the qualifying phone interviews.
   </p>
+  <h4>Selection process</h4>
+  <p>
+    If you are found qualified, you will have a chance to learn more about the position at the different agencies hiring and select which agencies you are interested in pursuing. You will be removed from consideration for any agency that you indicate you are not interested in pursuing.
+  </p>
+  <p>
+    If an offer is extended to you by an agency and you accept, you will then be removed from consideration for other positions.
+  </p>
   <h4>Future consideration</h4>
   <p>
-    If an offer is extended to you by an agency and you accept, you will then be removed from consideration for other positions. If you are not selected for this position you may be considered for similar positions at High Impact Service Provider agencies for up to 1 year.
+    If you are not selected for this position you may be considered for similar positions at High Impact Service Provider agencies for up to 1 year.
   </p>
   <h3>Get answers to questions about this process and position</h3>
   <p>
