Updates from Amira and Policy on the CX JOA.

--- a/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
+++ b/_includes/components/joa/usds/cx/how-you-will-be-evaluated.html
@@ -20,24 +20,16 @@
   </p>
   <h4>Selection process</h4>
   <p>
-    If you are found qualified, you will have a chance to learn more about the position at the different agencies hiring and select which agencies you are interested in pursuing. You will be removed from consideration for any agency that you indicate you are not interested in pursuing.
+    If you are found qualified, you will have a chance to learn more about the position at the different agencies hiring.
   </p>
   <p>
-    If an offer is extended to you by an agency and you accept, you will then be removed from consideration for other positions.
+    Once an offer is extended to you by an agency and you accept, decline, or do not respond, you are not guaranteed another offer but may receive one from another participating agency. You will be given 72 hours to respond to any offer.
   </p>
   <h4>Future consideration</h4>
   <p>
-    If you are not selected for this position you may be considered for similar positions at High Impact Service Provider agencies for up to 1 year.
+    If you are not selected for this position you may be considered for similar positions at agencies for up to 1 year.
   </p>
-  <h3>Get answers to questions about this process and position</h3>
   <p>
-    To address questions about the application process and requirements, we will optional "office hours" phone calls during the application period for this position on March 11th at 3 PM EST.
+    Candidates may be considered for other roles even if you do not formally submit an application (i.e. If you apply as a Customer Experience Strategist but we see potential in your skillset to serve as a Design Strategist, we may consider you for that position based on our own assessment.)
   </p>
-  <ul>
-    <li><strong>March 18-23</strong>: The announcement will be open during this period or until midnight the day 150 applicants apply.</li>
-    <li><strong>Early April</strong>: First round interviews (30 minute phone calls)</li>
-    <li><strong>Mid April</strong>: Second round interviews  (1 hour phone calls)</li>
-    <li><strong>Early May</strong>: Agency-specific interviews with qualifying applicants</li>
-    <li><strong>Mid to late May</strong>: Tentative selection offers are sent to applicants. Applicants have 48 hours to confirm or decline offers before being considered no longer interested.</li>
-  </ul>
 </div>
