--- a/_includes/components/joa/usds/cx/qualifications.html
+++ b/_includes/components/joa/usds/cx/qualifications.html
@@ -8,7 +8,7 @@
     <li>{{ competency }}</li>
     {% endfor %}
   </ul>
-  <h4>General Schedule pay scale - Grade Levels</h4>
+  <strong>General Schedule pay scale - Grade Levels</strong>
   <p>
     Not all agencies may be hiring at all grade levels. Thus when you apply please select the lowest grade level you are willing to accept.
   </p>
@@ -21,5 +21,22 @@
   <p>
     <strong>GS 15 ($142,701 - $170,800):</strong> To quality for the GS 15 level, in addition to what is described at the 14 level, your resume and portfolio will show at least one year experience leading organizations and building teams to drive multiple CX initiatives across organizational silos. You have extensive experience using customer data and user research to drive your organization to become more customer focused.
   </p>
+  <strong>Get answers to questions about this process and position</strong>
+  <p>
+    To address questions about the application process and requirements, we will hold two optional conference calls before the application period for this position:
+  </p>
+  <ol>
+    <li>March 16th at 2pm EST. Dial-in: 1-877-369-5243, passcode: 0119142#
+    <li>March 16th at 8pm EST. Dial-in: 1-877-369-5243, passcode: 0961308#
+  </ol>
+  <strong>What to expect when</strong>
+  <ul>
+    <li><strong>Prior to March 25th:</strong> Create a USAJOBS Profile, and upload your documents (e.g., resume, design portfolio).</li>
+    <li><strong>March 25th</strong>: Job posting opens – apply on this date as the posting will close on the first day we reach 200 applications.</li>
+    <li><strong>Mid-April</strong>: First round interviews (30 minute phone calls)</li>
+    <li><strong>Late-April</strong>: Second round interviews  (1 hour phone calls)</li>
+    <li><strong>May</strong>: Agency-specific interviews with qualifying applicants</li>
+    <li><strong>Mid-Late May</strong>: Offers made</li>
+  </ul>
   {% include components/joa/usds/doi/this-job-is-open-to.html %}
 </div>
